src/test/resources/typeSystemTestModels/invalid/expressions/BooleanNot.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class BooleanNot {
  float l = 1;
  boolean c = ~l;
}
